fix contrast on footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-  background-color: $accent-secondary;
+  background-color: $footer-bg;
 }
 
 body {
@@ -49,7 +49,7 @@ body {
 }
 
 footer {
-  background: $accent-secondary;
+  background: $footer-bg;
   color: $white;
   padding-bottom: 1em;
   padding-top: 1em;
