--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,9 @@ $gradient-dark: #c200fb;
 // secondary colors
 $turquoise: #57dddd;
 $blue: #4056f4;
-$violet: #c200fb;
+$violet: #c100fa;
+
+$footer-bg: $accent-main;
 
 $white: #fff;
 
